--- a/src/components/VenueNfo/style.css
+++ b/src/components/VenueNfo/style.css
@@ -111,6 +111,6 @@
   }
   
   .vn_item .vn_icon {
-    left: 41.5%;
+    left: 41%;
   }
 }
